--- a/package.json
+++ b/package.json
@@ -3,21 +3,41 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev-server": "webpack-dev-server"
+    "clean": "rm -rf build public/bundle.js",
+    "build": "babel server --out-dir build --presets=es2015 && webpack",
+    "start": "cross-env NODE_ENV=production node ./build/main.js",
+    "development": "cross-env NODE_ENV=development nodemon --exec babel-node --presets=es2015 ./server/main.js --watch server"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "bootstrap": "^4.3.1",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "file-loader": "^3.0.1",
+    "mongoose": "^5.4.21",
+    "morgan": "^1.9.1",
     "react": "^15.2.1",
-    "react-dom": "^15.2.1"
+    "react-addons-update": "^15.6.2",
+    "react-dom": "^15.2.1",
+    "react-redux": "^6.0.1",
+    "react-router": "^5.0.0",
+    "react-timeago": "^4.4.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "url-loader": "^1.1.2"
   },
   "devDependencies": {
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "css-loader": "^2.1.1",
     "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.23.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
