--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,8 +18,15 @@ phases:
       - echo Build Completed on $(date +%Y-%m-%d)
 artifacts:
   files:
-    - '**/*'
+    - 'build/**/*'
+    - 'public/*'
+    - 'server/**/*'
+    - 'src/**/*'
+    - 'node_modules/**/*'
+    - 'package.json'
   name: resume-react-express_$(date +%Y-%m-%d)
+  discard-paths: yes
+
 cache:
   paths:
     - '/node_modules/**/*'
