--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
+    "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "file-loader": "^3.0.1",
+    "html2canvas": "^1.0.0-rc.1",
+    "jspdf": "^1.5.3",
     "mongoose": "^5.4.21",
     "morgan": "^1.9.1",
+    "nodemon": "^1.18.11",
     "react": "^15.2.1",
     "react-addons-update": "^15.6.2",
     "react-dom": "^15.2.1",
+    "react-github-widget": "0.0.7",
     "react-redux": "^6.0.1",
     "react-router": "^5.0.0",
     "react-timeago": "^4.4.0",
