--- a/appspec.yml
+++ b/appspec.yml
@@ -8,3 +8,9 @@ permissions:
     pattern: "**"
     owner: ubuntu
     group: ubuntu
+hooks:
+  AfterInstall:
+    - location: scripts/applicationStop.sh
+      timeout: 180
+    - location: scripts/applicationStart.sh
+      timeout: 180
