--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,8 @@ phases:
 artifacts:
   files:
     - 'build/**/*'
-    - 'public/*'
+    - 'scripts/*'
+    - 'public/**/*'
     - 'server/**/*'
     - 'src/**/*'
     - 'node_modules/**/*'
